crates/search/tests/dynamic_search_rules/snapshots/mod.rs/create_and_get/1.snap
---
source: crates/indexsearch/tests/dynamic_search_rules/mod.rs
---
{
  "uid": "rule-1",
  "active": false,
  "conditions": [],
  "actions": [
    {
      "selector": {
        "id": "42"
      },
      "action": {
        "type": "pin",
        "position": 1
      }
    }
  ]
}
